@@ -57,9 +57,9 @@ This will generate the sdk files in a results directory at the root of this proj
 
 Alternatively, you can build a docker image which can be used to build device services in, with the following command:
 
-`docker build -t edgex-csdk-base:2.0.0 -f scripts/Dockerfile.alpine-base .`
+`docker build -t edgex-csdk-base:2.1.0 -f scripts/Dockerfile.alpine-base .`
 
-You can then write a Dockerfile for your service that begins `FROM edgex-csdk-base:2.0.0`
+You can then write a Dockerfile for your service that begins `FROM edgex-csdk-base:2.1.0`
 
 ### Versioning
 
